--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "prebuild": "npm run update:deploy-time",
     "start": "next start",
     "lint": "next lint",
-    "update:deploy-time": "ts-node scripts/updateDeployTime.js"
+    "update:deploy-time": "ts-node scripts/updateDeployTime.js",
+    "prepare": "husky"
   },
   "dependencies": {
     "next": "15.4.5",
@@ -20,6 +21,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "husky": "^9.1.7",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "typescript": "^5"
